# moa

./: .clang-format  CMakeLists.txt  README.md  csv_loader.cpp  csv_loader.h  main  main.hip
apps/: CMakeLists.txt  main.cpp  main.hip
src/: CMakeLists.txt  csv_loader.cpp  csv_loader.hpp  graph.hip  graph.hpp  hello_world.hip  hello_world.hpp  hip_macros.hpp
tests/: CMakeLists.txt  test_csv.csv  test_csv_loader.cpp  test_graph.cpp  test_hello_world.cpp
